@@ -4,6 +4,8 @@ Post-v3.6.0
      * 'ovs/route/show': added new option, table=[ID|all], to list routes from
        a specific OVS table or all routes from all tables.
      * Added a new sub-command, ovs/route/rule/show, to list OVS router rules.
+     * 'ovs/route/add' and 'ovs/route/del': added new option, table=ID, to
+       add/delete a route from a specific OVS table.
 
 v3.6.0 - 18 Aug 2025
 --------------------
